kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  type: ClusterIP
  selector:
    app: homework
  ports:
    - protocol: TCP
      port: 80            # service
      targetPort: 8000    # web python (container)
