kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    # Опциональные аннотации для nginx-ingress контроллера
    kubernetes.io/ingress.class: "nginx"   # или другой класс, если используется не nginx
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
